Template/vADC-ASG-Puppet.template
{
  "AWSTemplateFormatVersion" : "2010-09-09",

  "Description": "This AWS CloudFormation Template deploys a cluster of Pulse vADCs into a new VPC through an ASG in front of two Linux instances running web server. vADC configuration template is downloaded from GitHub page, customised with runtime parameter values, and applied to the vADC cluster. Configuration tasks are performed on an Ubuntu Linux instance maintained by an ASG.",
  "Metadata" : {
    "AWS::CloudFormation::Interface" : {
      "ParameterGroups" : [
        {
          "Label" : { "default" : "VPC Configuration" },
          "Parameters" : [ "AZs", "VPCCIDR", "PublicSubnetCIDR1", "PrivateSubnetCIDR1", "PublicSubnetCIDR2", "PrivateSubnetCIDR2" ]
        },

        {
          "Label" : { "default" : "vADC Configuration" },
          "Parameters" : [ "vADCVers", "InstanceType", "KeyName", "AdminPass" ]
        },
        {
          "Label" : { "default" : "Security Configuration" },
          "Parameters" : [ "RemoteAccessCIDR" ]
        },
        {
          "Label" : { "default" : "Sample App Configuration" },
          "Parameters" : [ "DomainName", "AppConfigURL", "SSLPublicKey", "SSLPrivateKey" ]
        }
      ],
      "ParameterLabels" : {
        "VPCCIDR" : { "default" : "New VPC CIDR Block:" },
        "PublicSubnetCIDR1" : { "default" : "Public Subnet 1:" },
        "PublicSubnetCIDR2" : { "default" : "Public Subnet 2:" },
        "PrivateSubnetCIDR1" : { "default" : "Private Subnet 1:" },
        "PrivateSubnetCIDR2" : { "default" : "Private Subnet 2:" },
        "InstanceType" : { "default" : "vADC instance type:" },
        "vADCVers" : { "default" : "vADC Version:" },
        "KeyName" : { "default" : "SSH Key Name:" },
        "AdminPass" : { "default" : "vADC admin user password:" },
        "AZs" : { "default" : "Select two Availability Zones:" },
        "RemoteAccessCIDR" : { "default" : "Remote Access CIDR:" },
        "DomainName" : { "default" : "Sample Web App Domain name:" },
        "AppConfigURL" : { "default" : "vADC Config Puppet Manifest URL:" },
        "SSLPublicKey" : { "default" : "SSL Public Key:" },
        "SSLPrivateKey" : { "default" : "SSL Private Key:" }
      }
    }
  },

  "Parameters": {
    "InstanceType": {
      "Description": "Please select a vADC EC2 instance type",
      "Type": "String",
      "Default": "m4.large",
      "AllowedValues": [
        "c4.2xlarge",
        "c4.4xlarge",
        "c4.8xlarge",
        "c4.large",
        "c4.xlarge",
        "d2.2xlarge",
        "d2.4xlarge",
        "d2.8xlarge",
        "d2.xlarge",
        "i2.2xlarge",
        "i2.4xlarge",
        "i2.8xlarge",
        "i2.xlarge",
        "i3.16xlarge",
        "i3.2xlarge",
        "i3.4xlarge",
        "i3.8xlarge",
        "i3.large",
        "i3.xlarge",
        "m4.10xlarge",
        "m4.16xlarge",
        "m4.2xlarge",
        "m4.4xlarge",
        "m4.large",
        "m4.xlarge",
        "r3.2xlarge",
        "r3.4xlarge",
        "r3.8xlarge",
        "r3.large",
        "r3.xlarge",
        "r4.16xlarge",
        "r4.2xlarge",
        "r4.4xlarge",
        "r4.8xlarge",
        "r4.large",
        "r4.xlarge",
        "t2.2xlarge",
        "t2.large",
        "t2.medium",
        "t2.xlarge",
        "x1.16xlarge",
        "x1.32xlarge"
      ],
      "ConstraintDescription": "Must be an allowed EC2 instance type."
    },

    "vADCVers" : {
      "Description" : "Please select vADC version:",
      "Type" : "String",
      "Default" : "181",
      "AllowedValues" : [
        "172r2",
        "173",
        "174",
        "181"
      ],
      "ConstraintDescription" : "Must be a valid vADC version"
    },

    "KeyName": {
      "Type": "AWS::EC2::KeyPair::KeyName",
      "AllowedPattern" : "[-_ a-zA-Z0-9]+",
      "Description": "Name of an existing EC2 KeyPair. Your vADC will launch with this KeyPair.",
      "ConstraintDescription": "Must be the name of an existing EC2 KeyPair."
    },

    "AdminPass": {
      "Description" : "Password for the vADC admin user. Must be 6 to 32 characters containing letters, numbers and symbols",
      "Type"        : "String",
      "MinLength"   : "6",
      "MaxLength"   : "32",
      "AllowedPattern" : "(?=^.{6,255}$)((?=.*\\d)(?=.*[A-Z])(?=.*[a-z])|(?=.*\\d)(?=.*[^A-Za-z0-9])(?=.*[a-z])|(?=.*[^A-Za-z0-9])(?=.*[A-Z])(?=.*[a-z])|(?=.*\\d)(?=.*[A-Z])(?=.*[^A-Za-z0-9]))^.*",
      "NoEcho"         : "true",
      "Default"        : "Password123"
    },

    "RemoteAccessCIDR": {
      "Description": "Allowed source IP address range for SSH access into vADC",
      "Type": "String",
      "MinLength": "9",
      "MaxLength": "18",
      "Default": "0.0.0.0/0",
      "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$",
      "ConstraintDescription": "Must be a valid CIDR range of the form x.x.x.x/x."
    },

    "VPCCIDR": {
      "Description": "This is the IP block for your new VPC. Typically it is a /16 from the private IP range.",
      "Type": "String",
      "Default": "10.8.0.0/16",
      "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$",
      "ConstraintDescription": "Must be a valid CIDR range of the form x.x.x.x/x."
    },

    "AZs": {
      "Description": "List of Availability Zones where Private and Public subnet pairs will be created.",
      "Type": "List<AWS::EC2::AvailabilityZone::Name>",
      "ConstraintDescription": "Please select two AZs from a drop-down list."
    },

    "PublicSubnetCIDR1": {
      "Description": "vADC 1 will have one interface in this public subnet.",
      "Type": "String",
      "Default": "10.8.1.0/24",
      "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$",
      "ConstraintDescription": "Must be a valid CIDR range of the form x.x.x.x/x."
    },

    "PublicSubnetCIDR2": {
      "Description": "vADC 2 will have one interface in this public subnet.",
      "Type": "String",
      "Default": "10.8.2.0/24",
      "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$",
      "ConstraintDescription": "Must be a valid CIDR range of the form x.x.x.x/x."
    },

    "PrivateSubnetCIDR1": {
      "Description": "This is a private subnet available for your instances in AZ1.",
      "Type": "String",
      "Default": "10.8.3.0/24",
      "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$",
      "ConstraintDescription": "Must be a valid CIDR range of the form x.x.x.x/x."
    },

    "PrivateSubnetCIDR2": {
      "Description": "This is a private subnet available for your instances in AZ2.",
      "Type": "String",
      "Default": "10.8.4.0/24",
      "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$",
      "ConstraintDescription": "Must be a valid CIDR range of the form x.x.x.x/x."
    },

    "DomainName": {
      "Type": "String",
      "Default": "corp.local",
      "AllowedPattern" : "[\\-a-zA-Z0-9\\.]*",
      "Description": "Domain name for the example app. This template will create apex and www records in Route53.",
      "ConstraintDescription": "Please use letters, numbers, and dashes only."
    },

    "AppConfigURL": {
      "Type": "String",
      "Default": "https://raw.githubusercontent.com/dkalintsev/vADC-CloudFormation/master/Template/cluster-config-template.pp",
      "AllowedPattern" : "https?://[-a-zA-Z0-9\\.%/_]*",
      "Description": "URL of the Puppet manifest for vADC configuration.",
      "ConstraintDescription": "Please use letters, numbers, and dashes only. Apologies - this regex is rather simple."
    },

    "SSLPublicKey": {
      "Type": "CommaDelimitedList",
      "Default": "-----BEGIN CERTIFICATE-----,MIIDVjCCAj4CCQDV3CoPt5+GrzANBgkqhkiG9w0BAQUFADBtMQswCQYDVQQGEwJV,UzERMA8GA1UECBMITmV3IFlvcmsxETAPBgNVBAcTCEJyb29rbHluMSEwHwYDVQQK,ExhFeGFtcGxlIEJyb29rbHluIENvbXBhbnkxFTATBgNVBAMUDCouY29ycC5sb2Nh,bDAeFw0xNzEwMjUwMjI4MDhaFw0xODEwMjUwMjI4MDhaMG0xCzAJBgNVBAYTAlVT,MREwDwYDVQQIEwhOZXcgWW9yazERMA8GA1UEBxMIQnJvb2tseW4xITAfBgNVBAoT,GEV4YW1wbGUgQnJvb2tseW4gQ29tcGFueTEVMBMGA1UEAxQMKi5jb3JwLmxvY2Fs,MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEA3eLwS9QNDCq4DY686o81 [...]
      "Description": "Change your public SSL key newlines to commas."
    },

    "SSLPrivateKey": {
      "Type": "CommaDelimitedList",
      "NoEcho": "true",
      "Default": "-----BEGIN RSA PRIVATE KEY-----,MIIEpAIBAAKCAQEA3eLwS9QNDCq4DY686o81pEMgr1SVlzwB8kbPVZdDAYF0kqk2,j3SsqGoxHmvVCx3mpZL3wpXoNF0N4D0DzkDYAAVzpN9tfUY3MB7SkurGbw2bfhX0,CvTvwFPgdJebccfc45jP+8s2UF3hG5pa9A5X1G0OpQR4GqRBetxZg/hdYm9oDYgc,eoQfaiy1JO6Qszwnbeyr6Pv00PrK8f0tH3J7ONW4B/7Jrrk+doYGw7RGP+bpAGkl,dHdUWyd0+pFv4j5/CbXI341onJns20gLnr8IgZ90B4ZXi7ZQynu3aJ8c83yrGNft,/CtxH6rjEFK9L9lhGPSenzjdh5Vn7Y8+DLS7JQIDAQABAoIBAQCyiwzvB2ekVa+a,gTP0zl3MmpNvYfGpKwkp6d6mMbwiNwgVh4G2t5zDPAfgQcbBVkMlEni5JCUg [...]
      "Description": "Change your private SSL key newlines to commas."
    }

  },

  "Mappings" : {

    "vADCAMI" : {
      "ap-south-1" : { "104r2" : "ami-bf4f1bd0", "172r2" : "ami-94e5c5fb", "173" : "ami-8fc9b7e0", "174" : "ami-052c6f6a", "181" : "ami-bbe3c3d4" },
      "eu-west-3" : { "104r2" : "ami-d11aadac", "172r2" : "ami-69972614", "173" : "ami-aae156d7", "174" : "ami-abc671d6", "181" : "ami-2bbd0c56" },
      "eu-west-2" : { "104r2" : "ami-b2fee6d6", "172r2" : "ami-01f71566", "173" : "ami-bccfd9d8", "174" : "ami-24beac40", "181" : "ami-bde90bda" },
      "eu-west-1" : { "104r2" : "ami-51ea7c28", "172r2" : "ami-47c7ef3e", "173" : "ami-352fce4c", "174" : "ami-0eed3f77", "181" : "ami-82c5edfb" },
      "ap-northeast-2" : { "104r2" : "ami-44cb6b2a", "172r2" : "ami-e86ec786", "173" : "ami-9fbf61f1", "174" : "ami-16fb5e78", "181" : "ami-1c6ec772" },
      "ap-northeast-1" : { "104r2" : "ami-ba69f5dc", "172r2" : "ami-7fa84400", "173" : "ami-f61e0191", "174" : "ami-3027f856", "181" : "ami-a658b5d9" },
      "sa-east-1" : { "104r2" : "ami-eec78482", "172r2" : "ami-35bfed59", "173" : "ami-0b7f0a67", "174" : "ami-704c321c", "181" : "ami-abbeecc7" },
      "ca-central-1" : { "104r2" : "ami-c4e461a0", "172r2" : "ami-66d25202", "173" : "ami-ec7ac588", "174" : "ami-97f24af3", "181" : "ami-cad050ae" },
      "ap-southeast-1" : { "104r2" : "ami-41eb9d3d", "172r2" : "ami-ed6f4491", "173" : "ami-1abb3179", "174" : "ami-7e077c1d", "181" : "ami-136b406f" },
      "ap-southeast-2" : { "104r2" : "ami-7622d014", "172r2" : "ami-31fb2f53", "173" : "ami-a1ccdec2", "174" : "ami-311dff53", "181" : "ami-8ff92ded" },
      "eu-central-1" : { "104r2" : "ami-c8f261a7", "172r2" : "ami-3bc9e9d0", "173" : "ami-d66fcfb9", "174" : "ami-1577c87a", "181" : "ami-a0c7e74b" },
      "us-east-1" : { "104r2" : "ami-a6c696dc", "172r2" : "ami-e9813a96", "173" : "ami-268c8930", "174" : "ami-cdea22b7", "181" : "ami-5b8b3024" },
      "us-east-2" : { "104r2" : "ami-f9ffd49c", "172r2" : "ami-02ad9f67", "173" : "ami-d4e2c3b1", "174" : "ami-1e765a7b", "181" : "ami-4eac9e2b" },
      "us-west-1" : { "104r2" : "ami-817070e1", "172r2" : "ami-ad706fcd", "173" : "ami-6be4cb0b", "174" : "ami-70467410", "181" : "ami-5f716e3f" },
      "us-west-2" : { "104r2" : "ami-352e844d", "172r2" : "ami-f5493d8d", "173" : "ami-5e2b3827", "174" : "ami-7430f60c", "181" : "ami-a74d39df" }
    },

    "vADCPuppetModuleVersion" : {
      "PMVers": {
        "104r2": " '>=1.38.0 < 1.39.0' ",
        "172r1": " '>=1.400.0 < 1.500.0' ",
        "173":   " '>=1.500.0 < 1.501.0' ",
        "174":   " '>=1.501.0 < 1.502.0' ",
        "181":   " '>=1.501.0 < 1.502.0' "
      }
    },

    "UbuntuAMI" : {
      "ap-south-1" : { "AMI" : "ami-feb4fc91" },
      "eu-west-3" : { "AMI" : "ami-fe4cfb83" },
      "eu-west-2" : { "AMI" : "ami-7950491d" },
      "eu-west-1" : { "AMI" : "ami-34f2604d" },
      "ap-northeast-2" : { "AMI" : "ami-5451f73a" },
      "ap-northeast-1" : { "AMI" : "ami-816cf4e7" },
      "sa-east-1" : { "AMI" : "ami-926527fe" },
      "ca-central-1" : { "AMI" : "ami-72b90316" },
      "ap-southeast-1" : { "AMI" : "ami-1384f76f" },
      "ap-southeast-2" : { "AMI" : "ami-c831ccaa" },
      "eu-central-1" : { "AMI" : "ami-a531a3ca" },
      "us-east-1" : { "AMI" : "ami-33e4bc49" },
      "us-east-2" : { "AMI" : "ami-d36e46b6" },
      "us-west-1" : { "AMI" : "ami-915f5cf1" },
      "us-west-2" : { "AMI" : "ami-b88c3bc0" }
    }

  },

  "Conditions" : {
    "US-East-1": { "Fn::Equals" : [{ "Ref" : "AWS::Region" }, "us-east-1"] }
  },

  "Resources": {

    "VPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": {
          "Ref": "VPCCIDR"
        },
        "EnableDnsHostnames": "true",
        "EnableDnsSupport": "true",
        "Tags": [
          {  "Key": "Application",
            "Value": "vADC Quick Start"
          },

          { "Key": "Name",
            "Value": { "Fn::Join": [ "-", [ { "Ref": "AWS::StackName" }, "VPC" ] ] }
          }

        ]
      }
    },

    "DHCPOptions" : {
      "Type": "AWS::EC2::DHCPOptions",
      "Properties": {
        "DomainName": {
          "Fn::If": [
            "US-East-1",
            "ec2.internal",
            { "Fn::Join": [ ".", [ { "Ref" : "AWS::Region" }, "compute.internal" ] ] }
          ]
        },
        "DomainNameServers": [ "AmazonProvidedDNS" ]
      }
    },

    "VPCDHCPOptionsAssociation" : {
      "Type" : "AWS::EC2::VPCDHCPOptionsAssociation",
      "Properties" : {
        "VpcId" : {"Ref" : "VPC"},
        "DhcpOptionsId" : {"Ref" : "DHCPOptions"}
      }
    },

    "PublicSubnet1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "CidrBlock": {
          "Ref": "PublicSubnetCIDR1"
        },
        "Tags": [
          { "Key": "Name",
            "Value": { "Fn::Join": [ "-", [ { "Ref": "AWS::StackName" }, "PubSub1" ] ] }
          }
        ],
        "AvailabilityZone": {
          "Fn::Select": [ "0", { "Ref": "AZs" } ]
        }
      }
    },

    "PublicSubnet2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "CidrBlock": {
          "Ref": "PublicSubnetCIDR2"
        },
        "Tags": [
          { "Key": "Name",
            "Value": { "Fn::Join": [ "-", [ { "Ref": "AWS::StackName" }, "PubSub2" ] ] }
          }
        ],
        "AvailabilityZone": {
          "Fn::Select": [ "1", { "Ref": "AZs" } ]
        }
      }
    },

    "PrivateSubnet1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "CidrBlock": {
          "Ref": "PrivateSubnetCIDR1"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": { "Fn::Join": [ "-", [ { "Ref": "AWS::StackName" }, "PriSub1" ] ] }
          }
        ],
        "AvailabilityZone": {
          "Fn::Select": [ "0", { "Ref": "AZs" } ]
        }
      }
    },

    "PrivateSubnet2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "CidrBlock": {
          "Ref": "PrivateSubnetCIDR2"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": { "Fn::Join": [ "-", [ { "Ref": "AWS::StackName" }, "PriSub2" ] ] }
          }
        ],
        "AvailabilityZone": {
          "Fn::Select": [ "1", { "Ref": "AZs" } ]
        }
      }
    },

    "InternetGateway": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": { "Fn::Join": [ "-", [ { "Ref": "AWS::StackName" }, "IGW" ] ] }
          }
        ]
      }
    },

    "AttachGateway": {
      "DependsOn": "InternetGateway",
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "InternetGatewayId": {
          "Ref": "InternetGateway"
        }
      }
    },

    "PublicSubnetRouteTable": {
      "DependsOn": "AttachGateway",
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": { "Fn::Join": [ "-", [ { "Ref": "AWS::StackName" }, "PubSubRouteTab" ] ] }
          }
        ]
      }
    },

    "PublicRoute1": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "AttachGateway",
        "Properties": {
        "RouteTableId": {
          "Ref": "PublicSubnetRouteTable"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "InternetGateway"
        }
      }
    },

    "PublicSubnet1RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "PublicSubnet1"
        },
        "RouteTableId": {
          "Ref": "PublicSubnetRouteTable"
        }
      }
    },

    "PublicSubnet2RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "PublicSubnet2"
        },
        "RouteTableId": {
          "Ref": "PublicSubnetRouteTable"
        }
      }
    },

    "vADCSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "vADC Access Rules",
        "VpcId": {
          "Ref": "VPC"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "icmp",
            "FromPort": "-1",
            "ToPort": "-1",
            "CidrIp": { "Ref": "VPCCIDR" }
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": { "Ref": "RemoteAccessCIDR" }
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "9090",
            "ToPort": "9090",
            "CidrIp": { "Ref": "RemoteAccessCIDR" }
          },
          {
            "IpProtocol": "udp",
            "FromPort": "9090",
            "ToPort": "9090",
            "CidrIp": { "Ref": "VPCCIDR" }
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "9080",
            "ToPort": "9080",
            "CidrIp": { "Ref": "VPCCIDR" }
          },
          {
            "IpProtocol": "udp",
            "FromPort": "9080",
            "ToPort": "9080",
            "CidrIp": { "Ref": "VPCCIDR" }
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "8083",
            "ToPort": "8083",
            "CidrIp": { "Ref": "VPCCIDR" }
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "8086",
            "ToPort": "8086",
            "CidrIp": { "Ref": "VPCCIDR" }
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "11000",
            "ToPort": "11000",
            "CidrIp": { "Ref": "VPCCIDR" }
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "11002",
            "ToPort": "11002",
            "CidrIp": { "Ref": "VPCCIDR" }
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "11007",
            "ToPort": "11007",
            "CidrIp": { "Ref": "VPCCIDR" }
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "9070",
            "ToPort": "9070",
            "CidrIp": { "Ref": "VPCCIDR" }
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "8092",
            "ToPort": "8092",
            "CidrIp": { "Ref": "VPCCIDR" }
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "80",
            "ToPort": "80",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "443",
            "ToPort": "443",
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": { "Fn::Join": [ "-", [ { "Ref": "AWS::StackName" }, "vADCSG" ] ] }
          }
        ]
      }
    },

    "vADCIAMRole": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Version" : "2012-10-17",
          "Statement": [
            {
              "Effect": "Allow",
              "Principal": {
                "Service": [ "ec2.amazonaws.com" ]
              },
              "Action": [ "sts:AssumeRole" ]
            }
          ]
        },
        "Path": "/",
        "Policies": [
          {
            "PolicyName": "vADCIAMPolicy",
            "PolicyDocument": {
              "Version" : "2012-10-17",
              "Statement": [
                {
                  "Effect": "Allow",
                  "Action": [
                    "ec2:DescribeRegions",
                    "ec2:DescribeInstances",
                    "ec2:DescribeAddresses",
                    "ec2:DescribeNetworkInterfaces",
                    "ec2:AssociateAddress",
                    "ec2:DisassociateAddress",
                    "ec2:AllocateAddress",
                    "ec2:ReleaseAddress",
                    "ec2:AssignPrivateIPAddresses",
                    "ec2:UnAssignPrivateIpAddresses"
                  ],
                  "Resource": "*"
                },
                {
                  "Effect": "Allow",
                  "Action": [
                    "ec2:RunInstances",
                    "ec2:TerminateInstances",
                    "ec2:CreateTags",
                    "ec2:DeleteTags"
                  ],
                  "Resource": "arn:aws:ec2:*"
                }
              ]
            }
          }
        ]
      }
    },

    "vADCInstanceIAMProfile": {
      "Type": "AWS::IAM::InstanceProfile",
      "Properties": {
        "Path": "/",
        "Roles": [
          {
            "Ref": "vADCIAMRole"
          }
        ]
      }
    },

    "TrafficIP1": {
      "Type": "AWS::EC2::EIP",
      "DependsOn": "AttachGateway",
      "Properties": {
        "Domain": "vpc"
      }
    },

    "TrafficIP2": {
      "Type": "AWS::EC2::EIP",
      "DependsOn": "AttachGateway",
      "Properties": {
        "Domain": "vpc"
      }
    },

    "vADCGroup": {
      "Type": "AWS::AutoScaling::AutoScalingGroup",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": { "Fn::Join": [ "-", [ { "Ref": "AWS::StackName" }, "vADC" ] ] },
            "PropagateAtLaunch": "true"
          },
          {
            "Key": "ClusterID",
            "Value": { "Fn::Join": [ "-", [ { "Ref": "AWS::StackName" }, "vADC-Cluster" ] ] },
            "PropagateAtLaunch": "true"
          }
        ],
        "LaunchConfigurationName": {
          "Ref": "vADCLaunchConfig"
        },
        "MinSize": "2",
        "MaxSize": "2",
        "DesiredCapacity": "2",
        "VPCZoneIdentifier": [
          { "Ref": "PublicSubnet1" },
          { "Ref": "PublicSubnet2" }
        ]
      }
    },

    "vADCLaunchConfig": {
      "Type": "AWS::AutoScaling::LaunchConfiguration",
      "Metadata" : {
        "AWS::CloudFormation::Init" : {
          "configSets" : {
            "default" : [ "CreateFiles", "RunCommands" ]
          },

          "CreateFiles" : {
            "files" : {
              "/tmp/autocluster.sh" : {
                "source": "https://raw.githubusercontent.com/dkalintsev/vADC-CloudFormation/v1.1.0/Template/autocluster.sh",
                "context": {
                  "ClusterID": { "Fn::Join": [ "-", [
                    { "Ref": "AWS::StackName" },
                    "vADC-Cluster"
                  ]]},
                  "Verbose": "Yes"
                },
                "mode": "000755",
                "owner": "root"
              },
              "/tmp/housekeeper.sh" : {
                "source": "https://raw.githubusercontent.com/dkalintsev/vADC-CloudFormation/v1.1.0/Template/housekeeper.sh",
                "context": {
                  "ClusterID": { "Fn::Join": [ "-", [
                    { "Ref": "AWS::StackName" },
                    "vADC-Cluster"
                  ]]},
                  "Verbose": "Yes"
                },
                "mode": "000755",
                "owner": "root"
              },
              "/tmp/setup_stuff.sh" : {
                "content": { "Fn::Join": [ "", [
                  "#!/bin/bash\n",
                  "echo \"developer_mode_accepted     yes\" >> /opt/zeus/zxtm/global.cfg\n",
                  "echo \"rest!enabled     Yes\" >> /opt/zeus/zxtm/conf/settings.cfg\n",
                  "sed -i -e \"/flipper.autofailback/d\" /opt/zeus/zxtm/conf/settings.cfg\n",
                  "echo 'flipper!autofailback     Yes' >> /opt/zeus/zxtm/conf/settings.cfg\n",
                  "cd /tmp\n",
                  "curl \"https://s3.amazonaws.com/aws-cli/awscli-bundle.zip\" -o \"awscli-bundle.zip\"\n",
                  "unzip awscli-bundle.zip\n",
                  "./awscli-bundle/install -i /usr/local/aws -b /usr/local/bin/aws\n",
                  "rm -rf awscli*\n",
                  "wget https://github.com/stedolan/jq/releases/download/jq-1.5/jq-linux64\n",
                  "mv jq-linux64 /usr/local/bin/jq\n",
                  "chmod +x /usr/local/bin/jq\n",
                  "mkdir -p /opt/aws\n",
                  "mv /tmp/housekeeper.sh /opt/aws/\n",
                  "rm -f /tmp/ctab.txt\n",
                  "echo \"*/2 * * * * /opt/aws/housekeeper.sh > /var/log/housekeeper-out.log 2>&1\" > /tmp/ctab.txt\n",
                  "exit 0\n",
                  "\n"
                ]]},
                "mode": "000755",
                "owner": "root"
              }
            }
          },

          "RunCommands" : {
            "commands" : {

              "01-run_setup_stuff" : {
                "command" : "/tmp/setup_stuff.sh"
              },

              "02-del_setup_script" : {
                "command" : "rm -f /tmp/setup_stuff.sh"
              },

              "05-add_crontab" : {
                "command" : "crontab /tmp/ctab.txt"
              },

              "06-del_ctab_txt" : {
                "command" : "rm -f /tmp/ctab.txt"
              },

              "99-wait_1_min_then_signal_that_we_are_done" : {
                "command" : { "Fn::Join" : [ "", [
                  "/usr/local/bin/cfn-signal -e 0 ",
                  "-d https://$(curl http://169.254.169.254/latest/meta-data/public-ipv4):9090 ",
                  "'",
                  { "Ref" : "WaitHandle01" },
                  "'"
                ]]}
              }

            }
          }
        }
      },

      "DependsOn": "AttachGateway",
      "Properties": {
        "IamInstanceProfile": { "Ref": "vADCInstanceIAMProfile"},
        "InstanceType": {
          "Ref": "InstanceType"
        },
        "KeyName": {
          "Ref": "KeyName"
        },
        "AssociatePublicIpAddress": "true",
        "ImageId": {
          "Fn::FindInMap": [
            "vADCAMI",
            { "Ref": "AWS::Region" },
            { "Ref": "vADCVers" }
          ]
        },
        "SecurityGroups": [
          {
            "Ref": "vADCSecurityGroup"
          }
        ],
        "UserData" : { "Fn::Base64" : { "Fn::Join" : [ "", [
          "password=",
            { "Ref" : "AdminPass" },
          " accept_license=y",
          " cfn_stack=",
            { "Ref" : "AWS::StackName" },
          " cfn_resource=",
            "vADCLaunchConfig",
          " cfn_region=",
            { "Ref" : "AWS::Region" }
        ]]}}
      }
    },


    "WaitHandle01": {
        "Type": "AWS::CloudFormation::WaitConditionHandle",
        "Properties": {}
    },

    "WaitCondition01": {
        "Type": "AWS::CloudFormation::WaitCondition",
        "DependsOn": "vADCGroup",
        "Properties": {
            "Handle": {
                "Ref": "WaitHandle01"
            },
            "Timeout": "600",
            "Count": "2"
        }
    },

    "PuppetServerSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Puppet Server Access Rules",
        "VpcId": {
          "Ref": "VPC"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "icmp",
            "FromPort": "-1",
            "ToPort": "-1",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": {
              "Ref": "RemoteAccessCIDR"
            }
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": { "Fn::Join": [ "-", [ { "Ref": "AWS::StackName" }, "PuppetSG" ] ] }
          }
        ]
      }
    },

    "PuppetIAMRole": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Effect": "Allow",
              "Principal": {
                "Service": [ "ec2.amazonaws.com" ]
              },
              "Action": [ "sts:AssumeRole" ]
            }
          ]
        },
        "Path": "/",
        "Policies": [
          {
            "PolicyName": "vADCIAMPolicy",
            "PolicyDocument": {
              "Statement": [
                {
                  "Effect": "Allow",
                  "Action": [
                    "ec2:DescribeInstances"
                  ],
                  "Resource": "*"
                }
              ]
            }
          }
        ]
      }
    },

    "PuppetInstanceIAMProfile": {
      "Type": "AWS::IAM::InstanceProfile",
      "Properties": {
        "Path": "/",
        "Roles": [
          {
            "Ref": "PuppetIAMRole"
          }
        ]
      }
    },

    "PuppetASG": {
      "Type": "AWS::AutoScaling::AutoScalingGroup",
      "Properties": {
        "DesiredCapacity": "1",
        "LaunchConfigurationName": {
          "Ref": "PuppetLaunchConfig"
        },
        "MaxSize": "1",
        "MinSize": "1",
        "Tags": [
          {
            "Key": "Name",
            "Value": { "Fn::Join": [ "-", [ { "Ref": "AWS::StackName" }, "Puppet" ] ] },
            "PropagateAtLaunch": "true"
          }
        ],
        "VPCZoneIdentifier": [
          { "Ref": "PublicSubnet1" },
          { "Ref": "PublicSubnet2" }
        ]
      }
    },

    "PuppetLaunchConfig": {
      "Type": "AWS::AutoScaling::LaunchConfiguration",
      "Metadata" : {
        "AWS::CloudFormation::Init" : {
          "configSets" : {
            "default" : [ "CreateFiles" ]
          },
          "CreateFiles": {
            "files" : {
              "/root/UpdateClusterConfig.sh": {
                "source": "https://raw.githubusercontent.com/dkalintsev/vADC-CloudFormation/master/Template/UpdateClusterConfig.sh",
                "context": {
                  "ClusterID": { "Fn::Join": [ "-", [
                    { "Ref": "AWS::StackName" },
                    "vADC-Cluster"
                  ]]},
                  "Verbose": "Yes",
                  "Pool": "WebPool",
                  "PoolTag": { "Fn::Join": [ "-", [
                    { "Ref": "AWS::StackName" },
                    "WebServer"
                  ]]}
                },
                "mode": "000755",
                "owner": "root"
              },
              "/root/cluster-config-template.pp" : {
                "source": { "Ref": "AppConfigURL" },
                "context": {
                  "AdminPass": { "Ref": "AdminPass" },
                  "SSLPrivateKey": { "Fn::Join" : [ "\\n", { "Ref": "SSLPrivateKey"} ] },
                  "SSLPublicKey": { "Fn::Join" : [ "\\n", { "Ref": "SSLPublicKey"} ] },
                  "TrafficIPs": { "Fn::Join" : [ "", [
                    "\"", { "Ref": "TrafficIP1" }, "\",",
                    "\"", { "Ref": "TrafficIP2" }, "\""
                  ]]}
                }
              },
              "/root/puppet-apply.sh" : {
                "content": { "Fn::Join": [ "", [
                  "#!/bin/bash\n",
                  "cd /root\n",
                  "/root/UpdateClusterConfig.sh\n",
                  "if [[ \"$?\" == \"10\" && -f cluster-config.pp ]]; then\n",
                  "  puppet apply cluster-config.pp >> /var/log/puppet-out.log 2>&1\n",
                  "  if [[ \"$?\" != \"0\" ]]; then\n",
                  "    echo \"Something went wrong with puppet run at $(date)\" >> /root/puppetrun.log\n",
                  "    exit 1\n",
                  "  fi\n",
                  "fi\n"
                ]]},
                "mode": "000755",
                "owner": "root"
              }
            }
          }
        }
      },

      "Properties": {
        "AssociatePublicIpAddress": "true",
        "IamInstanceProfile": { "Ref": "PuppetInstanceIAMProfile"},
        "ImageId": {
          "Fn::FindInMap": [
            "UbuntuAMI",
            { "Ref": "AWS::Region" },
            "AMI"
          ]
        },
        "InstanceType": "t2.nano",
        "KeyName": {
          "Ref": "KeyName"
        },
        "SecurityGroups": [
          {
            "Ref": "PuppetServerSecurityGroup"
          }
        ],
        "UserData" : { "Fn::Base64" : { "Fn::Join" : ["", [
          "#!/bin/bash -xe\n",
          "apt-get update -y\n",
          "apt-get install puppet -y\n",
          "puppet module install tuxinvader-brocadevtm --version ",
          { "Fn::FindInMap": [
            "vADCPuppetModuleVersion",
            "PMVers",
            { "Ref": "vADCVers" }
          ] },
          "\n",
          "apt-get install python-pip -y\n",
          "pip install https://s3.amazonaws.com/cloudformation-examples/aws-cfn-bootstrap-latest.tar.gz\n",
          "pip install awscli --upgrade\n",
          "apt-get install jq -y\n",

          "/usr/local/bin/cfn-init -v ",
          "         --stack ", { "Ref" : "AWS::StackName" },
          "         --resource PuppetLaunchConfig ",
          "         --region ", { "Ref" : "AWS::Region" }, "\n",
          "sleep 60\n",
          "cd /root\n",
          "rm -f crtab.txt\n",
          "echo \"*/3 * * * * /root/puppet-apply.sh >> /var/log/puppet-apply-out.log 2>&1\" > crtab.txt\n",
          "crontab crtab.txt\n",
          "rm -f crtab.txt\n"
        ]]}}
      }
    },

    "NAT1EIP": {
      "Type": "AWS::EC2::EIP",
      "DependsOn": "AttachGateway",
      "Properties": {
        "Domain": "vpc"
      }
    },

    "NATGateway1": {
      "Type": "AWS::EC2::NatGateway",
      "DependsOn": "AttachGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
              "NAT1EIP",
              "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "PublicSubnet1"
        }
      }
    },

    "PrivateSubnetRouteTable1": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": { "Fn::Join": [ "-", [ { "Ref": "AWS::StackName" }, "PriSubRouteTab1" ] ] }
          }
        ]
      }
    },

    "PrivateRoute1": {
      "Type": "AWS::EC2::Route",
        "Properties": {
        "RouteTableId": {
          "Ref": "PrivateSubnetRouteTable1"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "NATGateway1"
        }
      }
    },

    "PrivateSubnet1RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "PrivateSubnet1"
        },
        "RouteTableId": {
          "Ref": "PrivateSubnetRouteTable1"
        }
      }
    },

    "PrivateSubnet2RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "PrivateSubnet2"
        },
        "RouteTableId": {
          "Ref": "PrivateSubnetRouteTable1"
        }
      }
    },

    "WebServerSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Web Server Access Rules",
        "VpcId": {
          "Ref": "VPC"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "icmp",
            "FromPort": "-1",
            "ToPort": "-1",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": { "Ref": "VPCCIDR" }
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "80",
            "ToPort": "80",
            "CidrIp": { "Ref": "VPCCIDR" }
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "443",
            "ToPort": "443",
            "CidrIp": { "Ref": "VPCCIDR" }
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": { "Fn::Join": [ "-", [ { "Ref": "AWS::StackName" }, "WebSG" ] ] }
          }
        ]
      }
    },

    "WebServerGroup": {
      "Type": "AWS::AutoScaling::AutoScalingGroup",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": { "Fn::Join": [ "-", [ { "Ref": "AWS::StackName" }, "WebServer" ] ] },
            "PropagateAtLaunch": "true"
          }
        ],
        "LaunchConfigurationName": {
          "Ref": "WSLaunchConfig"
        },
        "MinSize": "2",
        "MaxSize": "2",
        "DesiredCapacity": "2",
        "VPCZoneIdentifier": [
          { "Ref": "PrivateSubnet1" },
          { "Ref": "PrivateSubnet2" }
        ]
      }
    },

    "WSLaunchConfig": {
      "Type": "AWS::AutoScaling::LaunchConfiguration",

      "Properties": {
        "InstanceType": "t2.nano",
        "KeyName": {
          "Ref": "KeyName"
        },
        "AssociatePublicIpAddress": "false",
        "ImageId": {
          "Fn::FindInMap": [
            "UbuntuAMI",
            { "Ref": "AWS::Region" },
            "AMI"
          ]
        },
        "SecurityGroups": [
          {
            "Ref": "WebServerSecurityGroup"
          }
        ],
        "UserData" : { "Fn::Base64" : { "Fn::Join" : ["", [
          "#!/bin/bash -xe\n",
          "apt-get update -y\n",
          "apt-get install apache2 -y\n",
          "apt-get install python-pip -y\n",
          "pip install https://s3.amazonaws.com/cloudformation-examples/aws-cfn-bootstrap-latest.tar.gz\n",

          "iid=$(curl http://169.254.169.254/latest/meta-data/instance-id)\n",
          "lip=$(curl http://169.254.169.254/latest/meta-data/local-ipv4)\n",
          "cat > /var/www/html/index.html <<EOF\n",
          "<html>\n",
          "This is a simple page served from \"$iid\"<br>\n",
          "running with IP of \"$lip\"<br>\n",
          "</html>\n",
          "EOF\n",

          "/usr/local/bin/cfn-init -v ",
          "         --stack ", { "Ref" : "AWS::StackName" },
          "         --resource WebServerGroup ",
          "         --region ", { "Ref" : "AWS::Region" }, "\n"
        ]]}}
      }
    },

    "DNS": {
      "Type": "AWS::Route53::HostedZone",
      "Properties": {
        "HostedZoneConfig": {
          "Comment": "Hosted zone for the example app"
        },
        "Name": {
          "Ref": "DomainName"
        }
      }
    },

    "AppDNSRecord1" : {
      "Type" : "AWS::Route53::RecordSetGroup",
      "Properties" : {
        "HostedZoneId" : {
          "Ref" : "DNS"
        },
        "Comment" : "Records for my vADC traffic group IPs.",
        "RecordSets" : [
          {
            "Name": {
              "Fn::Join": [
                "", [ "www", ".", { "Ref": "DomainName" }, "." ]
              ]
            },
            "Type": "A",
            "TTL": "900",
            "ResourceRecords": [
              { "Ref": "TrafficIP1" },
              { "Ref": "TrafficIP2" }
            ]
          }
        ]
      }
    },

    "AppDNSRecord2" : {
      "DependsOn": "AppDNSRecord1",
      "Type" : "AWS::Route53::RecordSetGroup",
      "Properties" : {
        "HostedZoneId" : {
          "Ref" : "DNS"
        },
        "Comment" : "Apex alias record for my vADC traffic group IPs.",
        "RecordSets" : [
          {
            "Name": {
              "Fn::Join": [
                "", [ { "Ref": "DomainName" }, "." ]
              ]
            },
            "Type": "A",
            "AliasTarget": {
              "HostedZoneId": { "Ref": "DNS" },
              "DNSName": {
                "Fn::Join": [
                  "", [ "www", ".", { "Ref": "DomainName" }, "." ]
                ]
              }
            }
          }
        ]
      }
    }

  },

  "Outputs": {

    "vADCManagementURLs": {
      "Value": {
        "Fn::GetAtt": [
          "WaitCondition01",
          "Data"
        ]
      },
      "Description": "The public IP addresses of the 2 x vADC instances."
    },

    "WebAppURLs": {
      "Description": "Your sample web app is available on these URLs.",
      "Value": {
        "Fn::Join": [ "", [
          "Secure URL: https://",
          { "Ref": "DomainName" },
          " Insecure URL: http://",
          { "Ref": "DomainName" },
          ", IP1 (secure): https://",
          { "Ref": "TrafficIP1" },
          ", IP1 (insecure): http://",
          { "Ref": "TrafficIP1" },
          ", IP2 (secure): https://",
          { "Ref": "TrafficIP2" },
          ", IP2 (insecure): http://",
          { "Ref": "TrafficIP2" }
        ] ]
      }
    }

  }
}
